--- a/satdump.desktop
+++ b/satdump.desktop
@@ -4,6 +4,7 @@ Type=Application
 Terminal=false
 Exec=@CMAKE_INSTALL_PREFIX@/bin/satdump-ui
 Name=SatDump
+Comment=A generic satellite data processing software
 Icon=@CMAKE_INSTALL_PREFIX@/share/satdump/icon.png
 StartupWMClass=SatDump v@SATDUMP_VERSION@
 Categories=Science;HamRadio
