--- a/.github/workflows/all_build.yml
+++ b/.github/workflows/all_build.yml
@@ -21,11 +21,11 @@ jobs:
       run: cd $GITHUB_WORKSPACE/docker_builds/debian_12 && docker build . --tag satdump_build
 
     - name: Run Container
-      run: docker run --name build -v $GITHUB_WORKSPACE:/root/SatDump --env BUILD_NO="-$GITHUB_RUN_NUMBER" satdump_build /root/do_build.sh
+      run: docker run --name build -v $GITHUB_WORKSPACE:/root/SatDump-fork --env BUILD_NO="-$GITHUB_RUN_NUMBER" satdump_build /root/do_build.sh
 
     - name: Recover Deb Archive
       working-directory: ${{runner.workspace}}
-      run: docker cp build:/root/SatDump/satdump_debian_amd64.deb ./
+      run: docker cp build:/root/SatDump-fork/satdump_debian_amd64.deb ./
 
     - name: Save Deb Archive
       uses: actions/upload-artifact@v4
@@ -43,11 +43,11 @@ jobs:
       run: cd $GITHUB_WORKSPACE/docker_builds/debian_12 && docker build . --tag satdump_build
 
     - name: Run Container
-      run: docker run --name build -v $GITHUB_WORKSPACE:/root/SatDump --env BUILD_NO="-$GITHUB_RUN_NUMBER" satdump_build /root/do_build.sh
+      run: docker run --name build -v $GITHUB_WORKSPACE:/root/SatDump-fork --env BUILD_NO="-$GITHUB_RUN_NUMBER" satdump_build /root/do_build.sh
 
     - name: Recover Deb Archive
       working-directory: ${{runner.workspace}}
-      run: docker cp build:/root/SatDump/satdump_debian_arm64.deb ./
+      run: docker cp build:/root/SatDump-fork/satdump_debian_arm64.deb ./
 
     - name: Save Deb Archive
       uses: actions/upload-artifact@v4
@@ -65,7 +65,7 @@ jobs:
       run: cd $GITHUB_WORKSPACE/docker_builds/fedora_41 && docker build . --tag satdump_build
 
     - name: Run Container
-      run: docker run --name build -v $GITHUB_WORKSPACE:/root/SatDump --env BUILD_NO="$GITHUB_RUN_NUMBER" satdump_build /root/do_build.sh
+      run: docker run --name build -v $GITHUB_WORKSPACE:/root/SatDump-fork --env BUILD_NO="$GITHUB_RUN_NUMBER" satdump_build /root/do_build.sh
 
     - name: Recover RPM Archive
       working-directory: ${{runner.workspace}}
@@ -87,7 +87,7 @@ jobs:
       run: cd $GITHUB_WORKSPACE/docker_builds/fedora_42 && docker build . --tag satdump_build
 
     - name: Run Container
-      run: docker run --name build -v $GITHUB_WORKSPACE:/root/SatDump --env BUILD_NO="$GITHUB_RUN_NUMBER" satdump_build /root/do_build.sh
+      run: docker run --name build -v $GITHUB_WORKSPACE:/root/SatDump-fork --env BUILD_NO="$GITHUB_RUN_NUMBER" satdump_build /root/do_build.sh
 
     - name: Recover RPM Archive
       working-directory: ${{runner.workspace}}
